    None is an active setting.
    
- sql
  - The warning emitted by the Unicode and String types
    with convert_unicode=True no longer embeds the actual
    value passed.   This so that the Python warning
    registry does not continue to grow in size, the warning
    is emitted once as per the warning filter settings, 
    and large string values don't pollute the output.
    [ticket:1822]

  - The argument to "ESCAPE" of a LIKE operator or similar
    is passed through render_literal_value(), which may 
    implement escaping of backslashes.  [ticket:1400]
    
  - Fixed bug in Enum type which blew away native_enum
    flag when used with TypeDecorators or other adaption
    scenarios.

  - Inspector hits bind.connect() when invoked to ensure
    initialize has been called.  the internal name ".conn"
    is changed to ".bind", since that's what it is.
    
  - Modified the internals of "column annotation" such that
    a custom Column subclass can safely override
    _constructor to return Column, for the purposes of 
    making "configurational" column classes that aren't 
    involved in proxying, etc.

  - Column.copy() takes along the "unique" attribute
    among others, fixes [ticket:1829] regarding declarative
    mixins

- postgresql
  - render_literal_value() is overridden which escapes
    backslashes, currently applies to the ESCAPE clause
    of LIKE and similar expressions.   
    Ultimately this will have to detect the value of 
    "standard_conforming_strings" for full behavior.  
    [ticket:1400]

  - Won't generate "CREATE TYPE" / "DROP TYPE" if
    using types.Enum on a PG version prior to 8.3 - 
    the supports_native_enum flag is fully
    honored.  [ticket:1836]
    
- mysql
  - MySQL dialect doesn't emit CAST() for MySQL version 
    detected < 4.0.2.  This allows the unicode
    check on connect to proceed. [ticket:1826]

  - MySQL dialect now detects NO_BACKSLASH_ESCAPES sql
    mode, in addition to ANSI_QUOTES.  
    